--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
             <div class="user-name">Jeremy Robson</div>
           </div>
         </div>
-        <div class="intervals">
-          <div class="daily-btn">Daily</div>
-          <div class="weekly-btn">Weekly</div>
-          <div class="monthly-btn">Monthly</div>
+        <div class="timeframes">
+          <div class="daily-btn timeframe-text">Daily</div>
+          <div class="weekly-btn timeframe-text">Weekly</div>
+          <div class="monthly-btn timeframe-text">Monthly</div>
         </div>
       </div>
-      <div class="card-container"></div>
     </div>
     <div class="attribution">
       Challenge by
@@ -50,6 +49,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/Naresh-Khatri">Naresh Khatri</a>.
     </div>
-    <script src="./script.js" ></script>
+    <script src="./script.js"></script>
   </body>
 </html>
